bin/tests/lexer/errors/invalid_chars.swg
#global fileprivate

// ============================================================================
// Lexer Invalid Ok
// ============================================================================


// (vide)

¤ // swc-expected-error {{lex_err_invalid_char}}
